background shifting on mobile fixed
mobile keyboard not disappearing on enter key issue fixed

closing the result box panel with esc button feature added

button positions on mobile adjusted

cleaning the homepage with the homepage button wasn't working after it was directed from another page. fixed

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -9,9 +9,11 @@ body {
 
 
 
-  @apply bg-[url('/background-12.jpg')] bg-cover dark:bg-[url('/background-12d.jpg')] ;
-  background-size: cover; 
+  @apply bg-[url('/background-12.jpg')] transition-none bg-[#136570] dark:bg-[#282B30] dark:bg-[url('/background-12d.jpg')] min-h-[110vh] pb-20;
+  background-size: auto; 
   background-attachment: fixed; 
+  background-repeat: no-repeat;
+
 
 
   
